# NavigaMer

./: bio_index_demo.py  main_test.py  navigamer_out.tsv  v3_benchmark.ipynb
methods/: replot.py  run_indexer.py  tolerance_benchmark.py  v3_benchmark.ipynb  v3_benchmark.py  v3_exp5_real_data.ipynb  v3_replot.ipynb
methods/benchmark_output/: benchmark_results.json
methods/ksahlin/: Pyguide.md  extract_match_sequences.py  min_trial.py  strobemers_comparison.ipynb
methods/ksahlin/result/stromber/: 0.01.csv  matches.tsv  matches_with_sequences.tsv
methods/spaced_seed/: ales_fasta_fastq_align_parallel.py  ales_spaced_seed.py
methods/v3_benchmark_output/: exp1_position_recall.json  exp1_robustness.json  exp2_search_space.json  exp3_comprehensiveness.json  exp4_candidate_quality.json
navigamer_cpp/: CMakeLists.txt  Makefile  README.md  navigamer  test_distance_bound  test_recall
navigamer_cpp/include/: index_builder.hpp  io_utils.hpp  search_engine.hpp  structure.hpp  tools.hpp
navigamer_cpp/src/: index_builder.cpp  io_utils.cpp  main.cpp  search_engine.cpp  structure.cpp  test_distance_bound.cpp  test_recall.cpp  tools.cpp
results/: mytry.tsv
src/: __init__.py  fm_index.py  index_builder.py  io_utils.py  search_engine.py  structure.py  tools.py
tests/: benchmark.py
